# python-project-lvl1

./: .gitignore  .travis.yml  README.md  pyproject.toml
brain_games/: cli.py  games_config.py
brain_games/games/: arithmetic_progression.py  calculator.py  check_on_prime.py  gcd.py  parity_check.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
